[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 776.0
margin_top = 11.0
margin_right = 999.0
margin_bottom = 105.0

[node name="errado" type="Label" parent="LineEdit"]
margin_left = 146.0
margin_top = 1.0
margin_right = 231.0
margin_bottom = 65.0

[node name="Button" type="Button" parent="."]
margin_left = 145.0
margin_top = 42.0
margin_right = 336.0
margin_bottom = 146.0
text = "Minha lista"

[node name="Label" type="Label" parent="."]
margin_left = 458.0
margin_top = 207.0
margin_right = 979.0
margin_bottom = 563.0

[node name="Button2" type="Button" parent="."]
margin_left = 142.0
margin_top = 166.0
margin_right = 351.0
margin_bottom = 256.0
text = "Enviar"

[node name="Button3" type="Button" parent="."]
margin_left = 131.0
margin_top = 275.0
margin_right = 357.0
margin_bottom = 393.0
text = "Aperte para uma surpresa"

[node name="Button4" type="Button" parent="."]
margin_left = 122.0
margin_top = 405.0
margin_right = 368.0
margin_bottom = 587.0
text = "Digite um numero"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
